tests/NormalTests/paczka1/fuzzy1/25345201.err
Error in line 1: S206 S179 83,7
Error in line 4: nTai2H S206 54,1
Error in line 9: S206 S206 137,1
Error in line 18: I3lot4o S179 60,5
Error in line 26: S206 S206 16,7
Error in line 27: E5WE A908 97,0
Error in line 35: nTai2H S179 36,5
Error in line 33: E5WE S206 54,4
